Bug 1455903 - Make EditorBase::CloneAttributesWithTransaction() set sourceElement to aSourceElement rather than aDestElement r=m_kato

This is simple mistake of bug 1451672.

EditorBase::CloneAttributesWithTransaction() sets both sourceElement and
destElement to aDestElement, but of course, it should set sourceElement to
aSourceElement.

Additionally, this patch adds mozilla specific web-platform tests to check
attribute cloning with basic edit operation.

MozReview-Commit-ID: GM1VjRHG7C3